# memory-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DATA_FLOW.md  Dockerfile  ENVIRONMENT_SETUP.md  GITHUB_API_MIGRATION.md  IMPLEMENTATION_STATUS.md  LOGGING_GUIDE.md  README.md  alembic.ini  pyproject.toml  quick-start.md  worker.py
alembic/: env.py
alembic/versions/: 1121aa8ac350_initial_migration.py  46022896a035_fix_uuid_primary_key_default_factories.py
app/: __init__.py  config.py  main.py
app/agents/: base.py  claude_agent.py  gemini_agent.py  iflow_agent.py  registry.py
app/domain/: entities.py
app/infrastructure/: database.py  queue.py
app/presentation/: middleware.py
app/presentation/routers/: artifacts.py  health.py  logs.py  tasks.py
app/services/: github_api_service.py  judge_service.py  pr_service.py  prompt_service.py  task_logger.py
backend/: .env.example  README.md  alembic.ini  env.template  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py  002_add_breaking_validation.py  003_add_qa_interactions.py  d67dde312240_add_user_context_to_tasks.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  claude_agent.py  gemini_agent.py  iflow_agent.py  registry.py
backend/app/domain/: entities.py
backend/app/infrastructure/: cloud_queue.py  database.py
backend/app/presentation/: __init__.py  middleware.py
backend/app/presentation/routers/: artifacts.py  health.py  internal.py  logs.py  tasks.py
backend/app/services/: __init__.py  jsonl_exporter.py  prompt_service.py  task_logger.py
backend/prompts/: precompression.txt
backend/scripts/: run.sh  stop.sh
backend/workers/: cloud_worker.py  container_tasks.py  simple_worker.py  tasks.py
dockerfiles/: agent-base.Dockerfile  claude-agent.Dockerfile  gemini-agent.Dockerfile  iflow-agent.Dockerfile
prompts/: deepdive.txt  evaluator_set.txt  memory_only.txt  precompression.txt
scripts/: agent_entrypoint.sh  agent_runner.py  run.sh  stop.sh
static/: index.html  logs.html
ui/: .env.example  .firebaserc  README.md  firebase.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: AgentDetailsModal.tsx  Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  CreateTaskForm.tsx  Header.tsx  Input.tsx  LeaderboardChart.tsx  LiveLogViewer.tsx  Loading.tsx  Modal.tsx  ProtectedRoute.tsx  Select.tsx  Sidebar.tsx  StatsCard.tsx  TaskCard.tsx  TaskCardCompact.tsx  Toast.tsx  index.ts
ui/src/contexts/: AuthContext.tsx  ThemeContext.tsx
ui/src/hooks/: useAgents.ts  useLogs.ts  useTasks.ts
ui/src/pages/: CallbackPage.tsx  DashboardPage.tsx  LeaderboardsPage.tsx  LoginPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  index.ts
ui/src/types/: index.ts
ui/src/utils/: format.ts  status.ts
workers/: __init__.py  container_tasks.py  simple_worker.py  tasks.py
