[project]
name = "memory-break-orchestrator"
version = "0.1.0"
description = "Memory-Break Orchestrator for AI agent evaluation following VIBE architecture"
authors = [{name = "Memory-Break Team", email = "team@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7",
    "redis>=5.0.1",
    "rq>=1.15.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2",
    "pexpect>=4.8.0",
    "GitPython>=3.1.40",
    "jinja2>=3.1.2",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "anthropic>=0.72.0",
    "google-generativeai>=0.3.2",
    "openai>=1.3.7",
    "iflow-cli-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88

# Exclude files and directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "alembic/versions",
    "migrations",
]

[tool.ruff.lint]
# Enable comprehensive linting rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
    "T20",    # flake8-print
    "PLC",    # pylint convention
    "PLE",    # pylint error
    "PLR",    # pylint refactor
    "PLW",    # pylint warning
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary assignment before return
    "T201",    # Print statements (allowed in scripts)
    "E402",    # Module level import not at top of file (needed for some files)
    "PLR0915", # Too many statements (acceptable for complex functions)
    "PLR0912", # Too many branches (acceptable for complex logic)
    "PLW0603", # Global statement (needed for singleton pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
force-sort-within-sections = false
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
